fixed weird horizontal scrolling bug
Added bookend

--- a/_sass/_card-fluid.scss
+++ b/_sass/_card-fluid.scss
@@ -1,5 +1,5 @@
 .card {
-  width: 45vw;
+  width: 44vw;
   @media (min-width: 600px) {
     width: 30vw;
     font-size: 16px;
@@ -15,7 +15,7 @@
 
 .card {
   &.is-large {
-    width: 90vw;
+    width: 76vw;
     @media (min-width: 600px) {
       width: 45vw;
     }
