--- a/_sass/_carousel.scss
+++ b/_sass/_carousel.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
+  overflow-y: hidden;
   padding: 0;
   width: 100%;
   -webkit-overflow-scrolling: touch;
